update: Complete section of the main content

--- a/src/index.html
+++ b/src/index.html
@@ -93,9 +93,25 @@
                 </h1>
             </div>
         </header>
-        <main class="main center">
-            <section class="main">
-
+        <main class="main-content center">
+            <section class="section-primary center">
+                <h2 class="section-primary__title">Lorem ullamco</h2>
+                <div class="section-primary__image center">
+                    <img src="/public/images/desktop/lorem-ullamco1.jpg" alt="lorem-ullamco1" class="section-primary__image-item"/>
+                    <img src="/public/images/desktop/lorem-ullamco2.png" alt="lorem-ullamco2" class="section-primary__image-item"/>
+                </div>
+                <div class="section-primary__content center">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Excepteur eiusmod consectetur proident
+                        Lorem reprehenderit esse do anim velit in aliquip dolore ut officia. Consectetur reprehenderit
+                        proident do exercitation eu. Sunt fugiat pariatur elit est laboris quis. Esse mollit incididunt
+                        quis amet. Qui non irure incididunt laborum nisi cillum consequat aliquip aliquip cillum in. Ut
+                        excepteur labore voluptate tempor cupidatat dolor eiusmod do ipsum Lorem cupidatat do labore.
+                        </p>
+                        <p>
+                        Proident dolore nisi eiusmod excepteur aliquip esse ut excepteur. Non excepteur sunt
+                        reprehenderit sit ex ullamco eiusmod Lorem incididunt nisi mollit nostrud. Irure velit enim elit
+                        minim commodo qui culpa cillum duis fugiat consequat pariatur.</p>
+                </div>
             </section>
         </main>
         <footer>
