--- a/src/index.html
+++ b/src/index.html
@@ -93,25 +93,90 @@
                 </h1>
             </div>
         </header>
-        <main class="main-content center">
-            <section class="section-primary center">
-                <h2 class="section-primary__title">Lorem ullamco</h2>
-                <div class="section-primary__image center">
-                    <img src="/public/images/desktop/lorem-ullamco1.jpg" alt="lorem-ullamco1" class="section-primary__image-item"/>
-                    <img src="/public/images/desktop/lorem-ullamco2.png" alt="lorem-ullamco2" class="section-primary__image-item"/>
+        <main class="main-content">
+            <section class="section-first center">
+                <h2 class="section-first__title">Lorem ullamco</h2>
+                <div class="section-first__image center">
+                    <img src="/public/images/desktop/lorem-ullamco1.jpg" alt="lorem-ullamco1"
+                        class="section-first__image-item" />
+                    <img src="/public/images/desktop/lorem-ullamco2.png" alt="lorem-ullamco2"
+                        class="section-first__image-item" />
                 </div>
-                <div class="section-primary__content center">
+                <div class="section-first__content center">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Excepteur eiusmod consectetur proident
                         Lorem reprehenderit esse do anim velit in aliquip dolore ut officia. Consectetur reprehenderit
                         proident do exercitation eu. Sunt fugiat pariatur elit est laboris quis. Esse mollit incididunt
                         quis amet. Qui non irure incididunt laborum nisi cillum consequat aliquip aliquip cillum in. Ut
                         excepteur labore voluptate tempor cupidatat dolor eiusmod do ipsum Lorem cupidatat do labore.
-                        </p>
-                        <p>
+                    </p>
+                    <p>
                         Proident dolore nisi eiusmod excepteur aliquip esse ut excepteur. Non excepteur sunt
                         reprehenderit sit ex ullamco eiusmod Lorem incididunt nisi mollit nostrud. Irure velit enim elit
                         minim commodo qui culpa cillum duis fugiat consequat pariatur.</p>
                 </div>
+            </section>
+            <section class="section-second">
+                <div class="section-second__item">
+                    <img src="/public/images/desktop/lorem-ipsum.jpg" alt="lorem-ipsum" class="section-second__img" />
+                </div>
+                <div class="section-second__item section-second__content">
+                    <h3 class="section-second__title">Lorem ipsum</h3>
+                    <div class="section-second__subContent">
+                        <h5 class="section-second__subContent-title">Excepteur eiusmod consectetur</h5>
+                        <p class="section-second__subContent-description">Proident dolore nisi eiusmod excepteur
+                            aliquip esse ut excepteur. Non excepteur sunt
+                            reprehenderit sit ex ullamco eiusmod Lorem incididunt nisi mollit nostrud. Irure velit
+                            enim elit minim commodo qui culpa cillum duis fugiat consequat pariatur.</p>
+                    </div>
+                    <div class="section-second__subContent">
+                        <h5 class="section-second__subContent-title">Quis aliqua reprehenderit</h5>
+                        <p class="section-second__subContent-description">Proident dolore nisi eiusmod excepteur
+                            aliquip esse ut excepteur. Non excepteur sunt reprehenderit sit ex ullamco eiusmod Lorem
+                            incididunt nisi mollit nostrud. Irure velit enim elit minim commodo qui culpa cillum
+                            duis fugiat consequat pariatur.</p>
+                    </div>
+                    <div class="section-second__subContent">
+                        <h5 class="section-second__subContent-title">Ad sit cillum amet duis quis commodo</h5>
+                        <p class="section-second__subContent-description">Proident dolore nisi eiusmod excepteur
+                            aliquip esse ut excepteur. Non excepteur sunt reprehenderit sit ex ullamco eiusmod Lorem
+                            incididunt nisi mollit nostrud. Irure velit enim elit minim commodo qui culpa cillum
+                            duis fugiat consequat pariatur.</p>
+
+                    </div>
+                </div>
+                <div class="section-second__item section-second__content">
+                    <h3 class="section-second__title">Mollit aliquip do ipsum consectetur</h3>
+                    <div class="section-second__subContent">
+                        <p class="section-second__subContent-description">Ex laborum ea qui consectetur mollit commodo
+                            eiusmod culpa dolor cupidatat. Ullamco dolore irure ea sit elit velit non officia. Ad eu
+                            reprehenderit in et voluptate mollit. Reprehenderit incididunt magna consequat enim sit
+                            eiusmod
+                            est dolor laborum cupidatat.
+                        </p>
+                        <p class="section-second__subContent-description">
+                            Ipsum minim mollit irure dolore. Sint fugiat deserunt dolor aute enim et cillum adipisicing
+                            cillum nostrud anim. Sit dolore incididunt dolore do sunt pariatur consectetur id qui
+                            pariatur
+                            eu incididunt adipisicing. Irure sint fugiat officia veniam consectetur. Esse laborum amet
+                            aliqua ad in sunt labore duis.</p>
+                    </div>
+                </div>
+                <div class="section-second__item ">
+                    <img src="/public/images/desktop/ipsum-consectetur.jpg" alt="ipsum-consectetur"
+                        class="section-second__img" />
+                </div>
+            </section>
+            <section class="section-third">
+                <div class="section-third__note">
+                    <p>Aute duis sunt aliqua enim enim Lorem reprehenderit proident aliquip
+                        voluptate aliqua. Eiusmod labore officia minim laborum nostrud cupidatat.</p>
+                </div>
+                <p class="section-third__description">
+                    Nisi culpa voluptate eiusmod ullamco aliquip tempor elit sunt irure in excepteur dolore. Do eu eu
+                    officia voluptate veniam consequat veniam adipisicing dolor incididunt deserunt eiusmod amet. Sint
+                    veniam officia qui id consequat Lorem non consectetur commodo anim eiusmod nisi ipsum ut. Aliqua in
+                    dolore esse reprehenderit Lorem cillum
+                </p>
             </section>
         </main>
         <footer>
