update: UI section sixth of main content

--- a/src/index.html
+++ b/src/index.html
@@ -445,6 +445,26 @@
                     </div>
                 </div>
             </section>
+            <section class="section-sixth">
+                <div class="place-list">
+                    <div class="place-list__item" id="place1">
+                        <img src="/public/images/desktop/place1.jpg" alt="place1" class="place-list__item-image"/>
+                    </div>
+                    <div class="place-list__item" id="place2">
+                        <img src="/public/images/desktop/place2.jpg" alt="place1" class="place-list__item-image"/>
+                    </div>
+                    <div class="place-list__item" id="place3">
+                        <img src="/public/images/desktop/place3.jpg" alt="place1" class="place-list__item-image"/>
+                    </div>
+                    <div class="place-list__item" id="place4">
+                        <img src="/public/images/desktop/banner.jpg" alt="place1" class="place-list__item-image"/>
+                    </div>
+                </div>
+                <div class="section-sixth__action">
+                    <button type="button" class="button section-sixth__action-left"><</button>
+                    <button type="button" class="button section-sixth__action-right">></button>
+                </div>
+            </section>
         </main>
         <footer>
 
