fix: transform for section sixth

--- a/src/index.html
+++ b/src/index.html
@@ -466,8 +466,12 @@
                 </div>
             </section>
         </main>
-        <footer>
-
+        <footer class="footer">
+            <div class="footer__subscribe">
+                <div class="footer__subscribe-introduce"></div>
+                <div class="footer__subscribe-join"></div>
+                <div class="footer__subscribe-social"></div>
+            </div>
         </footer>
     </div>
 </body>
