Update: Complete UI for desktop

--- a/src/index.html
+++ b/src/index.html
@@ -119,7 +119,7 @@
                 <div class="section-second__item">
                     <img src="/public/images/desktop/lorem-ipsum.jpg" alt="lorem-ipsum" class="section-second__img" />
                 </div>
-                <div class="section-second__item section-second__content">
+                <div class="section-second__item section-second__content1">
                     <h3 class="section-second__title">Lorem ipsum</h3>
                     <div class="section-second__subcontent">
                         <h5 class="section-second__subcontent-title">Excepteur eiusmod consectetur</h5>
@@ -144,7 +144,7 @@
 
                     </div>
                 </div>
-                <div class="section-second__item section-second__content">
+                <div class="section-second__item section-second__content2">
                     <h3 class="section-second__title">Mollit aliquip do ipsum consectetur</h3>
                     <div class="section-second__subcontent">
                         <p class="section-second__subcontent-description">Ex laborum ea qui consectetur mollit commodo
@@ -377,10 +377,9 @@
                             </svg>
                         </div>
                         <div class="section-fifth__item-content">
-                            <p>Veniam exercitation reprehenderit proident cillum
-                                consequat est irure duis. Esse est qui mollit adipisicing dolore ut qui reprehenderit
-                                nulla
-                                dolore consectetur velit.</p>
+                            <p>Lorem ullamco in est sit proident elit adipisicing dolor occaecat enim et sunt. Proident
+                                duis sunt sit veniam non. Dolore ut officia consectetur excepteur consequat
+                                reprehenderit.</p>
                         </div>
                     </div>
                     <div class="section-fifth__item">
@@ -407,10 +406,9 @@
                             </svg>
                         </div>
                         <div class="section-fifth__item-content">
-                            <p>Veniam exercitation reprehenderit proident cillum
-                                consequat est irure duis. Esse est qui mollit adipisicing dolore ut qui reprehenderit
-                                nulla
-                                dolore consectetur velit.</p>
+                            <p>Lorem ullamco in est sit proident elit adipisicing dolor occaecat enim et sunt. Proident
+                                duis sunt sit veniam non. Dolore ut officia consectetur excepteur consequat
+                                reprehenderit.</p>
                         </div>
                     </div>
                     <div class="section-fifth__item">
@@ -437,10 +435,7 @@
                             </svg>
                         </div>
                         <div class="section-fifth__item-content">
-                            <p>Veniam exercitation reprehenderit proident cillum
-                                consequat est irure duis. Esse est qui mollit adipisicing dolore ut qui reprehenderit
-                                nulla
-                                dolore consectetur velit.</p>
+                            <p>Lorem ullamco in est sit proident elit adipisicing dolor occaecat enim et sunt. Proident duis sunt sit veniam non. Dolore ut officia consectetur excepteur consequat reprehenderit.</p>
                         </div>
                     </div>
                 </div>
@@ -478,7 +473,7 @@
                 </div>
                 <div class="section-sixth__action">
                     <button type="button" class="button section-sixth__action-left"><</button>
-                    <button type="button" class="button section-sixth__action-right">></button>
+                            <button type="button" class="button section-sixth__action-right">></button>
                 </div>
             </section>
         </main>
