update: Add UI for section second in mobile

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
                 <h2 class="section-first__title">Lorem ullamco</h2>
                 <div class="section-first__image center">
                     <img src="/public/images/desktop/lorem-ullamco1.jpg" alt="lorem-ullamco1"
-                        class="section-first__image-item" />
+                        class="section-first__image-item"/>
                     <img src="/public/images/desktop/lorem-ullamco2.png" alt="lorem-ullamco2"
                         class="section-first__image-item" />
                 </div>
@@ -123,10 +123,10 @@
                 </div>
             </section>
             <section class="section-second">
-                <div class="section-second__item">
-                    <img src="/public/images/desktop/lorem-ipsum.jpg" alt="lorem-ipsum" class="section-second__img" />
+                <div class="section-second__item section-second__item1">
+                    <img src="/public/images/desktop/lorem-ipsum.jpg" alt="lorem-ipsum" class="section-second__img"/>
                 </div>
-                <div class="section-second__item section-second__content1">
+                <div class="section-second__item section-second__item2 section-second__content1">
                     <h3 class="section-second__title">Lorem ipsum</h3>
                     <div class="section-second__subcontent">
                         <h5 class="section-second__subcontent-title">Excepteur eiusmod consectetur</h5>
@@ -151,7 +151,7 @@
 
                     </div>
                 </div>
-                <div class="section-second__item section-second__content2">
+                <div class="section-second__item section-second__item3 section-second__content2">
                     <h3 class="section-second__title">Mollit aliquip do ipsum consectetur</h3>
                     <div class="section-second__subcontent">
                         <p class="section-second__subcontent-description">Ex laborum ea qui consectetur mollit commodo
@@ -168,7 +168,7 @@
                             aliqua ad in sunt labore duis.</p>
                     </div>
                 </div>
-                <div class="section-second__item ">
+                <div class="section-second__item section-second__item4">
                     <img src="/public/images/desktop/ipsum-consectetur.jpg" alt="ipsum-consectetur"
                         class="section-second__img" />
                 </div>
