--- a/src/index.html
+++ b/src/index.html
@@ -40,12 +40,22 @@
                 </div>
                 <div class="nav__menu">
                     <div class="nav__menu-icon center">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="10" viewBox="0 0 25 10" fill="none">
-                            <line x1="0.5" y1="0.600098" x2="24.5" y2="0.600098" stroke="white" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <line x1="0.5" y1="8.6001" x2="24.5" y2="8.6001" stroke="white" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                        </svg>
+                        <div class="icon-mobile">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="8" viewBox="0 0 25 10" fill="none">
+                                <line x1="0.5" y1="0.600098" x2="24.5" y2="0.600098" stroke="white" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <line x1="0.5" y1="8.6001" x2="24.5" y2="8.6001" stroke="white" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                        <div class="icon-desktop">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="10" viewBox="0 0 25 10" fill="none">
+                                <line x1="0.5" y1="0.600098" x2="24.5" y2="0.600098" stroke="white" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <line x1="0.5" y1="8.6001" x2="24.5" y2="8.6001" stroke="white" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </div>
                         <p class="nav__menu-text">
                             MENU
                         </p>
