update: Refactor folder CSS

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wgentech Orangy Shop</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/components/footer/footer.css">
+    <link rel="stylesheet" href="css/components/header/header.css">
+    <link rel="stylesheet" href="css/components/main-content/section-first/section-first.css">
+    <link rel="stylesheet" href="css/components/main-content/section-second/section-second.css">
+    <link rel="stylesheet" href="css/components/main-content/section-third/section-third.css">
+    <link rel="stylesheet" href="css/components/main-content/section-fourth/section-fourth.css">
+    <link rel="stylesheet" href="css/components/main-content/section-fifth/section-fifth.css">
+    <link rel="stylesheet" href="css/components/main-content/section-sixth/section-sixth.css">
 </head>
 
 <body>
