update: Script create title text

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             </div>
             <nav class="nav">
                 <div class="nav__sale-timer">
-                    <span class="nav__sale-timer-text">FREE SHIPPING · COUPON: FREE.</span>
+                    <span class="nav__sale-timer-text" id="timer-text"></span>
                     <div class="countdown center" id="countdown-nav">
                         <div class="countdown__item countdown__item--days center">
                             <p class="countdown__duration">00</p>
@@ -646,6 +646,7 @@
             </div>
         </footer>
     </div>
+    <script src="javascript/index.js"></script>
 </body>
 
 </html>
