fix: update relative path

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
             <section class="section-first center">
                 <h2 class="section-first__title">Lorem ullamco</h2>
                 <div class="section-first__image center">
-                    <img src="../../../../public/images/desktop/lorem-ullamco1.jpg" alt="lorem-ullamco1"
+                    <img src="./public/images/desktop/lorem-ullamco1.jpg" alt="lorem-ullamco1"
                         class="section-first__image-item"/>
-                    <img src="../../../../public/images/desktop/lorem-ullamco2.png" alt="lorem-ullamco2"
+                    <img src="./public/images/desktop/lorem-ullamco2.png" alt="lorem-ullamco2"
                         class="section-first__image-item" />
                 </div>
                 <div class="section-first__content center">
@@ -142,7 +142,7 @@
             </section>
             <section class="section-second">
                 <div class="section-second__item section-second__item1">
-                    <img src="../../../../public/images/desktop/lorem-ipsum.jpg" alt="lorem-ipsum" class="section-second__img"/>
+                    <img src="./public/images/desktop/lorem-ipsum.jpg" alt="lorem-ipsum" class="section-second__img"/>
                 </div>
                 <div class="section-second__item section-second__item2 section-second__content1">
                     <h3 class="section-second__title">Lorem ipsum</h3>
@@ -187,7 +187,7 @@
                     </div>
                 </div>
                 <div class="section-second__item section-second__item4">
-                    <img src="../../../../public/images/desktop/ipsum-consectetur.jpg" alt="ipsum-consectetur"
+                    <img src="./public/images/desktop/ipsum-consectetur.jpg" alt="ipsum-consectetur"
                         class="section-second__img" />
                 </div>
             </section>
@@ -204,7 +204,7 @@
                 </p>
             </section>
             <section class="section-fourth">
-                <img src="../../../../public/images/desktop/main-product-item.jpg" alt="Main product"
+                <img src="./public/images/desktop/main-product-item.jpg" alt="Main product"
                     class="section-fourth__img" />
                     <div class="section-fourth__product">
                         <div class="product-list">
@@ -223,7 +223,7 @@
                                             </svg>
                                         </div>
                                     </div>
-                                    <img class="product-item__img" src="../../../../public/images/desktop/product-item1.jpg"
+                                    <img class="product-item__img" src="./public/images/desktop/product-item1.jpg"
                                         alt="Product item 1"></img>
                                     <div class="product-color">
                                         <div class="product-color__item product-color__green"></div>
@@ -261,7 +261,7 @@
                                             </svg>
                                         </div>
                                     </div>
-                                    <img class="product-item__img" src="../../../../public/images/desktop/product-item3.jpg"
+                                    <img class="product-item__img" src="./public/images/desktop/product-item3.jpg"
                                         alt="Product item 1"></img>
                                     <div class="product-color">
                                         <div class="product-color__item product-color__green"></div>
@@ -301,7 +301,7 @@
                                             </svg>
                                         </div>
                                     </div>
-                                    <img class="product-item__img" src="../../../../public/images/desktop/product-item2.jpg"
+                                    <img class="product-item__img" src="./public/images/desktop/product-item2.jpg"
                                         alt="Product item 1"></img>
                                     <div class="product-color">
                                         <div class="product-color__item product-color__green"></div>
@@ -339,7 +339,7 @@
                                             </svg>
                                         </div>
                                     </div>
-                                    <img class="product-item__img" src="../../../../public/images/desktop/product-item4.jpg"
+                                    <img class="product-item__img" src="./public/images/desktop/product-item4.jpg"
                                         alt="Product item 1"></img>
                                     <div class="product-color">
                                         <div class="product-color__item product-color__green"></div>
@@ -375,7 +375,7 @@
                         rhoncus. Purus rhoncus volutpat cum scelerisque. Orci proin neque nec lacinia gravida. Quis enim
                         nibh rutrum.</p>
                 </div>
-                <img src="../../../../public/images/desktop/ipsum-minim.jpg" alt="ipsum minim" class="section-fifth__img"></img>
+                <img src="./public/images/desktop/ipsum-minim.jpg" alt="ipsum minim" class="section-fifth__img"></img>
                 <div class="section-fifth__list-item">
                     <div class="section-fifth__item">
                         <div class="section-fifth__item-img">
@@ -497,28 +497,28 @@
             <section class="section-sixth">
                 <div class="place-list">
                     <div class="place-list__item" id="place1">
-                        <img src="../../../../public/images/desktop/place1.jpg" alt="place1" class="place-list__item-image" />
+                        <img src="./public/images/desktop/place1.jpg" alt="place1" class="place-list__item-image" />
                         <div class="place-list__item-name">
                             <p>Exterior</p>
                             <a>SEE PRODUCTS</a>
                         </div>
                     </div>
                     <div class="place-list__item" id="place2">
-                        <img src="../../../../public/images/desktop/place2.jpg" alt="place1" class="place-list__item-image" />
+                        <img src="./public/images/desktop/place2.jpg" alt="place1" class="place-list__item-image" />
                         <div class="place-list__item-name">
                             <p>Aute duis</p>
                             <a>SEE PRODUCTS</a>
                         </div>
                     </div>
                     <div class="place-list__item" id="place3">
-                        <img src="../../../../public/images/desktop/place3.jpg" alt="place1" class="place-list__item-image" />
+                        <img src="./public/images/desktop/place3.jpg" alt="place1" class="place-list__item-image" />
                         <div class="place-list__item-name">
                             <p>Proident</p>
                             <a>SEE PRODUCTS</a>
                         </div>
                     </div>
                     <div class="place-list__item" id="place4">
-                        <img src="../../../../public/images/desktop/banner.jpg" alt="place1" class="place-list__item-image" />
+                        <img src="./public/images/desktop/banner.jpg" alt="place1" class="place-list__item-image" />
                         <div class="place-list__item-name">
                             <p>Aliqua</p>
                             <a>SEE PRODUCTS</a>
